--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -1,10 +1,6 @@
-.hidden {
-  visibility: hidden;
-}
-
 .loader {
   display: flex;
   justify-content: center;
   font-size: 20px;
-  margin-bottom: 20px;
+  margin: 0 auto;
 }
