--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -1,6 +1,8 @@
 .loader {
   display: flex;
+  position: fixed;
   justify-content: center;
   font-size: 20px;
-  margin: 0 auto;
+  margin: auto;
+  left: 50vw;
 }
